--- a/UI/newMain.ui
+++ b/UI/newMain.ui
@@ -1931,7 +1931,7 @@ p, li { white-space: pre-wrap; }
                     <string notr="true">background: transparent;</string>
                    </property>
                    <property name="currentIndex">
-                    <number>3</number>
+                    <number>4</number>
                    </property>
                    <widget class="QWidget" name="home">
                     <property name="styleSheet">
@@ -4987,6 +4987,46 @@ font: 57 10pt &quot;Raleway Medium&quot;;</string>
                      </property>
                      <property name="alignment">
                       <set>Qt::AlignHCenter|Qt::AlignTop</set>
+                     </property>
+                    </widget>
+                    <widget class="QPushButton" name="enable2fa">
+                     <property name="geometry">
+                      <rect>
+                       <x>20</x>
+                       <y>120</y>
+                       <width>151</width>
+                       <height>31</height>
+                      </rect>
+                     </property>
+                     <property name="minimumSize">
+                      <size>
+                       <width>150</width>
+                       <height>30</height>
+                      </size>
+                     </property>
+                     <property name="font">
+                      <font>
+                       <family>Raleway SemiBold</family>
+                       <pointsize>10</pointsize>
+                       <weight>7</weight>
+                       <italic>false</italic>
+                       <bold>false</bold>
+                      </font>
+                     </property>
+                     <property name="cursor">
+                      <cursorShape>PointingHandCursor</cursorShape>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">background-color: #aa63ff;
+font: 63 10pt &quot;Raleway SemiBold&quot;;
+</string>
+                     </property>
+                     <property name="text">
+                      <string>Enable 2 Factor</string>
+                     </property>
+                     <property name="icon">
+                      <iconset>
+                       <normaloff>images/icons/cil-mobile.png</normaloff>images/icons/cil-mobile.png</iconset>
                      </property>
                     </widget>
                    </widget>
